# scicobot_rasp

./: README.md
install/: local_setup.sh  setup.sh
install/publisher_teste/lib/publisher_teste/: pub_tes
install/publisher_teste/share/publisher_teste/: local_setup.sh  package.bash  package.ps1  package.sh  package.xml  package.zsh
install/scicobot_encoder/lib/scicobot_encoder/: listener_encoder
install/scicobot_encoder/share/scicobot_encoder/: local_setup.dsv  local_setup.sh  package.sh
install/scicobot_move_on/lib/scicobot_move_on/: move_on
install/scicobot_move_on/share/scicobot_move_on/: local_setup.sh  package.dsv  package.sh  package.zsh
log/: latest_build
publisher_teste/: CMakeLists.txt
scicobot_encoder/log/: latest_build
scicobot_move/: CMakeLists.txt  package.xml
scicobot_move/src/: scicobot_publisher_move.cpp
scicobot_move_on/: CMakeLists.txt  package.xml
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/scicobot_encoder/: CMakeLists.txt
src/scicobot_encoder/install/: local_setup.sh  setup.sh
src/scicobot_encoder/src/: scicobot_subscriber_encoder.cpp
src/scicobot_move_on/: CMakeLists.txt
src/scicobot_ultrasonic/: CMakeLists.txt
src/scicobot_ultrasonic/src/: scicobot_subscriber_ultrasonic.cpp
src/test_cooperation_rasp/: CMakeLists.txt  package.xml
src/test_cooperation_rasp/src/: test_cooperation_rasp.cpp
src/test_cooperation_scicobot/: CMakeLists.txt
src/test_cooperation_scicobot/src/: simple_test_cooperation.cpp  test_cooperation_scicobot.cpp
src/teste/: CMakeLists.txt
src/teste/src/: teste.cpp
(+62 files in other folders)
